fixed gap in active link identifier

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28392,7 +28392,7 @@ nav {
 }
 
 .nav-link {
-  padding: 16px 0px;
+  padding: 18px 0px;
 }
 
 .nav-logo {
